# agent-workbench

./: .env.example  .gitignore  DEVELOPMENT_LOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_workbench/: __init__.py  agents.py  arguments.py  cli.py  config.py  context.py  errors.py  generation.py  interactive_setup.py  messages.py
src/agent_workbench/profiles/: __init__.py  developer.toml  planner.toml  reviewer.toml  tester.toml
src/agent_workbench/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
tests/: test_agents.py  test_arguments.py  test_cli.py  test_config.py  test_context.py  test_generation.py  test_interactive_setup.py  test_messages.py
tests/providers/: test_anthropic.py  test_factory.py  test_ollama.py  test_openai.py
