[project]
name = "agent-workbench"
version = "0.1.0"
description = "An incremental AI engineering workbench for building local and cloud-based LLM applications and agent workflows."
readme = "README.md"
authors = [
    { name = "Rafael Silva", email = "152502239+RafaelRFSSilva@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "ollama>=0.6.2",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
agent-workbench = "agent_workbench.cli:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
